--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1>Samesite Tester</h1>
+    <a href="https://anothersite.dtaylor.uk">Visit another site</a>
   </body>
 </html>
