--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Samesite Tester</h1>
-    <a href="https://anothersite.dtaylor.uk">Visit another site</a>
+    <a href="https://gist.github.com/davidtaylorhq/5cea71c6fc3c70f9ef09f932cb69cd5d">Visit gist</a>
   </body>
 </html>
