--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       <a href="https://gist.github.com/davidtaylorhq/5cea71c6fc3c70f9ef09f932cb69cd5d">Visit another site</a>
     </p>
 
+    <p>
+      <a href="https://redirect-test.dtaylor.uk">302 Redirect back to here</a>
+    </p>
+
     <script>
       function getCookie(cname) {
         // https://www.w3schools.com/js/js_cookies.asp
