--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <button onclick="readCookies()">Read Cookies</button>
       <button onclick="setCookies(); readCookies();">Set Cookies</button>
       <button onclick="deleteAllCookies(); readCookies();">Clear Cookies</button>
+      <button onclick="document.location = '/';">Refresh</button>
     </p>
 
     <p>
