--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
     </p>
 
     <p>
-      <a href="https://redirect-test.dtaylor.uk">302 Redirect back to here</a>
+      <a href="https://redirect-test.dtaylor.uk">302 Redirect back to here via different subdomain</a>
+    </p>
+
+    <p>
+      <a href="https://redirect-test.taylorhq.co.uk">302 Redirect back to here via different domain</a>
     </p>
 
     <script>
